--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.16.4",
     "@types/nodemailer": "^6.4.15",
     "bcrypt": "^5.1.1",
