--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,11 @@
 services:
   frontend:
-    build: ./frontend
+    image: nginx
     container_name: frontend
     ports:
-      - 80:5173
+      - 80:80
     volumes:
-      - ./frontend/:/app
+      - ./frontend/dist/:/usr/share/nginx/html
     networks:
       - todo-manager
   
