feat: CSS on add task page and mobile menu

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_BACKEND_URL='https://ideal-space-dollop-gvxxq6pqjq5h95jj-3030.app.github.dev'
+VITE_BACKEND_URL='https://3030-faithfulbre-jackexperts-uayt4j61wej.ws-us116.gitpod.io'
