feat: settingsings page, aadd task page

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-VITE_BACKEND_URL='https://3030-faithfulbre-jackexperts-uayt4j61wej.ws-us116.gitpod.io'
+VITE_BACKEND_URL='https://legendary-space-spoon-4pqq76r75xjhqr56-3030.app.github.dev'
