--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
       - 80:80
     volumes:
       - ./frontend/dist/:/usr/share/nginx/html
+      - ./frontend/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - todo-manager
   
@@ -14,8 +15,6 @@ services:
     container_name: backend
     ports:
       - 3030:3030
-    volumes:
-      - ./backend/:/app
     networks:
       - todo-manager
 
