--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -17,6 +17,11 @@ http {
         root /usr/share/nginx/html;
 
         # Configuração para servir arquivos estáticos
+
+        location /api {
+            proxy_pass http://backend:3030;
+        }
+
         location / {
             try_files $uri $uri/ /index.html;
         }
